# WebHW8

./: connect.py  main.py  pyproject.toml
first/: main.py  models.py
first/json/: qoutes.json
second/: config.ini  consumer.py  models.py  producer.py
